@@ -38,7 +38,7 @@
 
   - per-directory PHP version
 
-  - add sections to mass domain update page
-
   - SpamAssassin Rules Emporium
+
+  - popup link to show password on Edit Server page
 
