@@ -1,0 +1,9 @@
+<header>Automatically delete spam?</header>
+
+This option can be used to have spam in mail users' spam folders automatically
+deleted once it becomes too old or exceeds a certain size. Only spam that 
+exceeds whatever size or age criteria you set here will be removed, and checking
+is done once per day around midnight. <p>
+
+<footer>
+
