@@ -1,0 +1,13 @@
+<header>Automatically delete spam?</header>
+
+This option can be used to have spam in mail users' spam folders in virtual
+servers created with this template automatically
+deleted once it becomes too old or exceeds a certain size. Only spam that 
+exceeds whatever size or age criteria you set here will be removed, and checking
+is done once per day around midnight. <p>
+
+Enabling this is generally a good idea, as it keeps down disk usage and
+prevents users from having all their quotas filled up with old spam. <p>
+
+<footer>
+
