@@ -2594,7 +2594,11 @@ massdelete_doms=Servers to delete: $1
 massdelete_doing=Deleting server $1 ..
 
 massdomains_title=Update Virtual Servers
-massdomains_header=Changes to selected virtual servers
+massdomains_headerq=Quota and bandwidth changes
+massdomains_headerf=Enabled feature changes
+massdomains_headerl=Changes to owner limits
+massdomains_headerc=Changes to owner capabilities
+massdomains_headero=Configuration changes
 massdomains_feat=Feature '$1'
 massdomains_leave=Don't change
 massdomains_enable=Enable
@@ -2617,7 +2621,6 @@ massdomains_edom=Enabling server $1 ..
 massdomains_ealready=.. already enabled.
 massdomains_enone=.. no features to enable.
 massdomains_limits=Updating owner limits ..
-massdomains_header2=Changes to owner limits
 massdomains_features=Allowed features for servers
 massdomains_features2=Don't change
 massdomains_features1=Allow use of
